sfdx/force-app/main/default/objects/Contact/fields/ContactExternalID__c.field-meta.xml
<CustomField>
    <fullName>ContactExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ContactExternalID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>