sfdx/force-app/main/default/objects/Contact/fields/Last_Survey_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Survey_Date_Time__c</fullName>
    <description>The last survey feedback received date.</description>
    <inlineHelpText>The last survey feedback received date.</inlineHelpText>
    <label>Last Survey Date</label>
    <type>Date</type>
</CustomField>