sfdx/force-app/main/default/objects/Contact/fields/LDGCRM_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Partner Account the contact works for</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>LDGCRM_Partner_Account__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>