sfdx/force-app/main/default/objects/Contact/fields/LDGCRM_Pronunciation__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Pronunciation__c</fullName>
    <description>How to pronounce the contact&apos;s name</description>
    <inlineHelpText>How to pronounce the contact&apos;s name</inlineHelpText>
    <label>Pronunciation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>