sfdx/force-app/main/default/objects/Contact/fields/LDGCRM_Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Subscription_Type__c</fullName>
    <description>What kind of emails the contact should receive</description>
    <inlineHelpText>If the partner contact should receive the monthly newsletter, technical emails, or both</inlineHelpText>
    <label>Subscription Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newsletter Recipient</fullName>
            </value>
            <value>
                <fullName>Technical POC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>