sfdx/force-app/main/default/objects/Contact/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator when a contact notifies they do not want to participate in a satisfaction survey.
Survey_Opt_Out</description>
    <inlineHelpText>Check the box if they receive our Newsletter</inlineHelpText>
    <label>Newsletter</label>
    <type>Checkbox</type>
</CustomField>