sfdx/force-app/main/default/objects/Contact/fields/Source_Detail_Formula__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail_Formula__c</fullName>
    <description>This Field to be used for reports, it will consider the source value and then convert the dependent source detail field for text purpose is so that when building a report you wont have to add the 4 fields, 3 of which will be null you can just add this field.</description>
    <formula>IF(
!ISBLANK(TEXT( Source_Detail_Inquiry__c )), TEXT( Source_Detail_Inquiry__c ),
 IF(
  !ISBLANK( Source_Detail_Referral__c ), Source_Detail_Referral__r.FirstName  &amp; &apos; &apos; &amp; Source_Detail_Referral__r.LastName,
   IF(
    !ISBLANK( Source_Detail_Text__c ),  Source_Detail_Text__c,
     IF(
      !ISBLANK( Source_Detail_URL__c ),  Source_Detail_URL__c , NULL
       )
     )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Detail</label>
    <type>Text</type>
</CustomField>