sfdx/force-app/main/default/objects/Contact/fields/Source_Detail_Referral__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Detail (Referral)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Source Detail (Referral))</relationshipLabel>
    <relationshipName>Contact_Referral</relationshipName>
    <type>Lookup</type>
</CustomField>