sfdx/force-app/main/default/objects/Contact/fields/Survey_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Survey_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator when a contact notifies they do not want to participate in a satisfaction survey.</description>
    <label>Survey Opt Out</label>
    <type>Checkbox</type>
</CustomField>