sfdx/force-app/main/default/objects/Contact/recordTypes/FCIC_Duplicate.recordType-meta.xml
<RecordType>
    <fullName>FCIC_Duplicate</fullName>
    <active>true</active>
    <label>FCIC - Duplicate</label>
</RecordType>