sfdx/force-app/main/default/objects/Contact/recordTypes/FCIC_Individual.recordType-meta.xml
<RecordType>
    <fullName>FCIC_Individual</fullName>
    <active>true</active>
    <label>FCIC - Individual</label>
</RecordType>