sfdx/force-app/main/default/objects/Contact/recordTypes/Federal.recordType-meta.xml
<RecordType>
    <fullName>Federal</fullName>
    <active>true</active>
    <description>Use this record type for creating federal agency contacts. For example, jane.smith@state.gov for Department of State contact.</description>
    <label>Federal</label>
</RecordType>