sfdx/force-app/main/default/objects/Contact/recordTypes/GSA.recordType-meta.xml
<RecordType>
    <fullName>GSA</fullName>
    <active>true</active>
    <description>Use this record type for creating GSA contacts For example, tanya.smith@gsa.gov</description>
    <label>GSA</label>
</RecordType>